# climate-api

./: .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  climate-api.yaml  climate-api.yaml.example  climate-service.yaml.example  compose.ghcr.yml  index.html  mkdocs.yml  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  docs.yml
adding_custom_datasets/: index.html
architecture/: index.html
built_in_datasets/: index.html
climate_api/: cli.py  client.py  config.py  main.py
climate_api/data_manager/: __init__.py  routes.py
climate_api/extents/: routes.py  schemas.py  services.py
climate_api/ingest/: __init__.py  orchestrator.py  protocol.py  store.py
climate_api/ingestions/: execution.py  processes.py  routes.py  schemas.py  services.py  store_paths.py  sync_engine.py
climate_api/jobs/: __init__.py  routes.py  service.py  store.py
climate_api/openeo/: __init__.py  capabilities.py  collections.py  execution.py  jobs.py  processes.py  routes.py  schemas.py  udps.py
climate_api/processing/: gefs.py  resample.py  routes.py  schemas.py  services.py
climate_api/providers/: availability.py  remote_zarr.py
climate_api/publications/: services.py
climate_api/shared/: time.py  xarray_utils.py
climate_api/stac/: routes.py  services.py
climate_api/streaming/: __init__.py  orchestrator.py  protocol.py  store.py
climate_api/system/: __init__.py  routes.py  templates.py
climate_api/templates/: landing_page.html  manage.html  map-viewer.html  openeo-editor.html
climate_api/transforms/: __init__.py  pipeline.py  reproject.py  unit_conversion.py
climate_service/: cli.py  main.py  pygeoapi_app.py  startup.py
climate_service/extents/: __init__.py  routes.py  services.py
climate_service/ingestions/: processes.py  routes.py  services.py  sync_engine.py
climate_service/jobs/: models.py  routes.py  service.py  store.py
climate_service/openeo/: capabilities.py  collections.py  execution.py  jobs.py  processes.py  routes.py  udps.py
climate_service/processing/: resample.py  routes.py  services.py
climate_service/providers/: availability.py
climate_service/publications/: services.py
climate_service/stac/: routes.py  services.py
climate_service/system/: routes.py  (+1 more)
data/: extents.yaml
docs/: adding_custom_datasets.md  architecture.md  built_in_datasets.md  climate_services.md  extensibility.md  generic-workflow-components-and-orchestration.md  generic-workflow-exec-brief.md  generic-workflow-infographic-and-talking-points.md  generic-workflow.md  implementation-status.md  index.md  ingestion_dataset_api_guide.md  instance_guide.md  managed_data_api_guide.md  ogc-migration-plan.md  ogcapi.md  openeo-intro.md  openeo.md  prefect.md  processes.md  project_description.md  roadmap.md  setup_guide.md  simple-pygeoapi-publication-plan.md  transforms.md  user_guide.md  zarr_and_geozarr.md
examples/: openeo_process_graph.py  stac_discover_and_open.py  zarr_direct_access.py  zonal_statistics.py
extensibility/: index.html
implementation-status/: index.html
instance_guide/: index.html
managed_data_api_guide/: index.html
notebooks/: track1_probe_spike.ipynb
ogcapi/: index.html
open_climate_service/: __init__.py  cli.py  client.py  config.py  main.py  pygeoapi_app.py  startup.py
openeo/: index.html
overrides/: home.html
processes/: index.html
project_description/: index.html
roadmap/: index.html
search/: search_index.json
setup_guide/: index.html
stylesheets/: extra.css
tests/: conftest.py  helpers.py  test_chirps3_workflow.py  test_client.py  test_config.py  test_dataset_capabilities.py  test_dataset_registry.py  test_datasets.py  test_datasets_sync.py  test_downloader.py  test_era5_land_plugin.py  test_extents.py  test_fetch_strategy_contract.py  test_generic_dhis2_workflow.py  test_gridded_aggregation_service.py  test_ingest_orchestrator.py  test_ingest_plugins.py  test_ingestion_sync_async.py  test_jobs_api.py  test_jobs_service.py  test_main.py  test_ogc_async.py  test_ogc_jobs.py  test_openeo_execution.py  test_output_collections.py  test_preview_collection_query.py  test_preview_store_backend.py  test_process_registry.py  test_processing_resample.py  test_processing_routes.py  test_provider_availability.py  test_publications.py  test_remote_zarr.py  test_root.py  test_shared_time.py  test_stac.py  test_streaming_chirps3.py  test_streaming_orchestrator.py  test_transforms.py  test_transforms_reproject.py  (+6 more)
transforms/: index.html
user_guide/: index.html
zarr_and_geozarr/: index.html
(+283 files in other folders)
