[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "open_climate_service"

[tool.uv]
override-dependencies = [
    # openeo-pg-parser-networkx requires geojson-pydantic<2.0.0; our project uses >=2.1.0 which is compatible at runtime
    "geojson-pydantic>=2.1.0",
    # openeo-processes-dask has stale constraints; all safe to override (library doesn't use these directly)
    "zarr>=3.1.6",
    "pyarrow>=19.0",
    "xarray>=2025.12.0",
    "numpy>=2.2",
    "dask>=2024.1.0",
    "dask-geopandas>=0.4",
    "geopandas>=1.1",
    "xvec>=0.3",
    "rioxarray>=0.17",
    "pystac>=1.10",
    # gdal Python bindings must match system libgdal.
    # Update this version when your system libgdal changes: gdal-config --version
    # CI rewrites this line dynamically before uv sync (see .github/workflows/ci.yml).
    "gdal==3.12.2",
]

[tool.uv.sources]
openeo-processes-dask = { git = "https://github.com/dhis2/openeo-processes-dask", branch = "python313-arm64-compat" }

[project]
name = "open-climate-service"
version = "0.1.0a1"
requires-python = ">=3.13"
description = "Climate and Earth Observation data API"
license = { text = "BSD-3-Clause" }
authors = [{ name = "University of Oslo", email = "climate@dhis2.org" }]
readme = "README.md"
keywords = ["dhis2", "climate", "zarr", "stac", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "fastapi>=0.100.0",
    "jinja2>=3.1",
    "starlette>=0.27.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.1",
    "pygeoapi>=0.22.0",
    "pystac>=1.10,<2",
    "geojson-pydantic>=2.1.0",
    "httpx>=0.28.1",
    "earthkit-transforms==0.5.*",
    "metpy>=1.7,<2",
    "xstac>=1.0,<2",
    "zarr>=3.1.6,<4",
    "icechunk>=2.0,<3",
    "geozarr-toolkit==0.1.*",
    "topozarr==0.0.*",
    "rioxarray>=0.17",
    "portalocker>=3.2.0",
    "dhis2eo>=1.2.1",
    "openeo-pg-parser-networkx>=2026.3.3",
    "openeo-processes-dask[implementations]",
    "python-multipart>=0.0.29",
]

[project.urls]
Repository = "https://github.com/dhis2/open-climate-service"
Documentation = "https://github.com/dhis2/open-climate-service/tree/main/docs"
"Bug Tracker" = "https://github.com/dhis2/open-climate-service/issues"
Changelog = "https://github.com/dhis2/open-climate-service/releases"

[project.scripts]
climate-service = "open_climate_service.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["vendor/"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"open_climate_service/**/*.py" = ["D102", "D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["."]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pygeoapi.*", "rasterio.*", "pygeofilter.*", "requests.*", "geopandas.*", "earthkit.*", "metpy.*", "matplotlib.*", "yaml", "xproj", "topozarr.*", "geozarr_toolkit", "xstac", "openeo_pg_parser_networkx", "openeo_pg_parser_networkx.*", "openeo_processes_dask", "openeo_processes_dask.*", "dask_geopandas", "dask_geopandas.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["open_climate_service", "tests"]
exclude = ["**/.venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = "warning"
reportMissingModuleSource = false

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3,<3",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.2",
    "types-shapely>=2.1,<3",
    "watchfiles>=1.2.0",
]
